# paraswap-dex-lib

./: .gitignore  .npmignore  .prettierignore  CLAUDE.md  go.mod  jest.config.js  jest.setup.ts  package.json
native/: Cargo.toml  package-lock.json  package.json
native/src/: config.rs  lib.rs  pool_state.rs  query_outputs.rs  v4_query_outputs.rs
native/src/math/: bit_math.rs  full_math.rs  liquidity_math.rs  mod.rs  oracle.rs  sqrt_price_math.rs  swap_math.rs  tick.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs
scripts/: bench-all-dexes.ts  benchmark-dex-pricing.ts
src/: config.ts  constants.ts  generic-swap-transaction-builder.ts  index.ts  pools-helper.ts  pricing-helper.ts  stateful-event-subscriber.ts  tenderly-simulation.ts  types.ts  utils.ts
src/dex/: etherfi.ts  idex.ts  index.ts  simple-exchange-with-restrictions.ts  simple-exchange.ts
src/dex-helper/: dummy-dex-helper.ts
src/executor/: Executor01BytecodeBuilder.ts  Executor02BytecodeBuilder.ts  Executor02BytecodeBuilderMultiRoute.ts  Executor03BytecodeBuilder.ts  ExecutorBytecodeBuilder.ts  ExecutorDetector.ts  WETHBytecodeBuilder.ts  address-utils.ts  approval.ts  constants.ts  encoding-context.ts  encoding-helpers.test.ts  encoding-types.ts  executor01-bytecode-builder-snapshot.test.ts  executor02-bytecode-builder-snapshot.test.ts  factory.ts  route-plan.ts  types.ts  utils.ts
src/generic-swap-transaction-builder/: orchestration.ts
tests/: constants-e2e.ts  tenderly-simulation.test.ts  tenderly-simulation.ts  token-storage-slots.json  utils-e2e.ts  utils-events.ts  utils-insert-amounts.ts
(+624 files in other folders)
